--- a/RemeControl/RemeControl.vbproj
+++ b/RemeControl/RemeControl.vbproj
@@ -174,6 +174,13 @@
     <Compile Include="Views\Dashboard\DashView.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Views\Gasto\GastoABM.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\Gasto\GastoManager.vb" />
+    <Compile Include="Views\Gasto\GastoView.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Views\Socio\SocioABM.vb">
       <SubType>UserControl</SubType>
     </Compile>
